<resources>
    <string name="app_name">pizza lab</string>

    <string name="pizza_lab">Pizza Lab</string>

    <!-- Common -->
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="recent_chats">Recent Chats</string>

    <!-- Api Response Errors -->
    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="error_network">Please check your network connection</string>

    // Bottom Navigation Menu Titles
    <string name="home">Home</string>
    <string name="create_pizza">Create Pizza</string>
    <string name="order">Order</string>
    <string name="profile">Profile</string>

    <!-- Register Screen -->
    <string name="register">Register</string>
    <string name="your_profile">Your Profile</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_phone">Enter phone number</string>
    <string name="enter_address">Enter address</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account">Already have account?</string>

    <!-- Login Screen -->
    <string name="login">Login</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="continue_text">Get Started</string>
    <string name="wrong_password">Wrong password</string>
    <string name="dont_have_account_yet">Don\'t have account yet?</string>

    <!-- Input errors -->
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_username">Username must contain at least 2 symbols</string>
    <string name="invalid_password">A password must contain at least 8 symbols</string>
    <string name="invalid_confirm_password">Passwords must match</string>
    <string name="food">Food</string>
    <string name="special_for_you">Special For You</string>

    <!-- Pizza -->
    <string name="pizza_price">$%s</string>
    <string name="create_your">Create Your</string>
    <string name="own_pizza">Own Pizza</string>
    <string name="delivery_time">40min</string>
    <string name="free">Free</string>
    <string name="welcome_to_lab">Welcome To The Lab</string>

    <!-- Pizza sizes -->
    <string name="twenty_four">24 cm</string>
    <string name="thirty_two">32 cm</string>
    <string name="forty_four">48 cm</string>

    <string name="my_order">My Order</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="back_to_home">Back To Home</string>
    <string name="order_placed">Order placed</string>
    <string name="order_successful_description">Your order was placed successfuly. Expect your pizza to arrive in 40 minutes</string>
    <string name="thank_you">Thank You</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="quantity">Quantity:</string>
    <string name="date">Date</string>
    <string name="payment">Payment</string>
    <string name="popular">Popular</string>

</resources>