<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.example.pizzalab.vo.purchase.PurchaseUiModel" />

        <variable
            name="presenter"
            type="com.example.pizzalab.ui.purchase.PurchasePresenter" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_medium">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rozanova_semi_bold"
            android:text="@string/my_order"
            android:layout_marginTop="@dimen/margin_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/text_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_pizzas"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_medium"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:listitem="@layout/item_pizza_order" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="@dimen/margin_xx_medium"
            android:background="@color/grey"
            app:layout_constraintBottom_toTopOf="@+id/text_discount"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/text_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_xx_medium"
            android:fontFamily="@font/rozanova_semi_bold"
            android:text="@string/discount"
            android:textSize="@dimen/text_medium"
            app:layout_constraintBottom_toTopOf="@+id/text_total"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_discount_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/text_discount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_discount"
            app:textPrice="@{model.discountAmount}"
            tools:text="$11.99" />

        <TextView
            android:id="@+id/text_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_xx_medium"
            android:fontFamily="@font/rozanova_semi_bold"
            android:text="@string/total"
            android:textColor="@color/black"
            android:textSize="@dimen/text_xx_medium"
            app:layout_constraintBottom_toTopOf="@+id/button_confirm_order"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/text_xx_medium"
            app:layout_constraintBottom_toBottomOf="@+id/text_total"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_total"
            app:textPrice="@{model.totalPrice}"
            tools:text="$34.99" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_confirm_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_shopping_cart_add"
            android:onClick="@{() -> presenter.orderNow()}"
            android:paddingVertical="@dimen/padding_medium"
            android:text="@string/confirm_order"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="@dimen/text_medium"
            app:cornerRadius="@dimen/radius_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>