<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.example.pizzalab.vo.home.HomeUiModel" />

        <variable
            name="presenter"
            type="com.example.pizzalab.ui.home.HomePresenter" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="@dimen/margin_medium">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:fontFamily="@font/rozanova_thin"
            android:text="@string/food"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:fontFamily="@font/rozanova_semi_bold"
            android:text="@string/special_for_you"
            android:textColor="@color/black"
            android:textSize="@dimen/text_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_pizzas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardview_create_pizza"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_pizza" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_create_pizza"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:onClick="@{() -> presenter.onCreateYourOwnPizzaClick()}"
            app:cardBackgroundColor="@color/jade_color"
            app:cardCornerRadius="@dimen/radius_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_medium">

                <TextView
                    android:id="@+id/text_view_create_your_pizza"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rozanova_thin"
                    android:text="@string/create_your"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_xx_medium"
                    app:layout_constraintBottom_toTopOf="@+id/textView4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rozanova_semi_bold"
                    android:text="@string/own_pizza"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_xx_medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_create_your_pizza" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/image_view_chef"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:elevation="4dp"
            android:src="@drawable/pizza_1"
            android:layout_marginEnd="@dimen/margin_small"
            app:layout_constraintBottom_toBottomOf="@+id/cardview_create_pizza"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>